--- a/.gitignore
+++ b/.gitignore
@@ -41,4 +41,6 @@ yarn-debug.log*
 .yarn-integrity
 
 
-/config/secrets.yml
+/config/application.yml
+# Ignore application configuration
+/config/application.yml
